# config

./: .gitignore  Cargo.toml  README.md  config.jsonc  config.toml
.gitea/workflows/: publish-kellnr.yml
.github/workflows/: ci.yml  publish.yml
src/: env.rs  file.rs  format.rs  lib.rs  paths.rs  secret.rs  sql.rs  tests.rs
src/tests/: internal_env.rs  internal_paths.rs  mod.rs  postgres.rs  sqlite.rs  support.rs
tests/: env_public.rs  paths_public.rs  read_write.rs  sqlite_public.rs
tests/common/: mod.rs
