[package]
name = "cloudiful-config"
version = "0.4.2"
edition = "2024"
description = "Small serde-based config helpers for TOML, JSON, JSONC, env overrides, and atomic saves."
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudiful/config.git"
documentation = "https://docs.rs/cloudiful-config"
keywords = ["config", "serde", "jsonc", "toml", "env"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
serde_json = "1.0.149"
