[package]
name = "cloudiful-config"
version = "0.5.1"
edition = "2024"
description = "Small serde-based config helpers for default app TOML, env overrides, and atomic saves."
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudiful/config.git"
documentation = "https://docs.rs/cloudiful-config"
keywords = ["config", "serde", "toml", "env"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
]

[features]
default = []
keyring = ["dep:keyring"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
serde_json = "1.0.149"
keyring = { version = "3.6.3", optional = true }
