[package]
name = "cloudiful-config"
version = "0.6.3"
edition = "2024"
description = "Small serde-based config helpers for default app TOML/SQL stores, env overrides, and atomic saves."
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudiful/config.git"
documentation = "https://docs.rs/cloudiful-config"
keywords = ["config", "serde", "toml", "env", "sql"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
]

[features]
default = []
keyring = ["dep:keyring", "dep:keyring-core"]

[dependencies]
dotenvy = "0.15.7"
postgres = "0.19.13"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
serde_json = "1.0.149"
keyring = { version = "4.0.1", optional = true }
keyring-core = { version = "1.0.0", optional = true }
